[package]
name = "flow"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "flow"

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
flow_integrity = { workspace = true } 
regex-lite = "0.1"
chrono = { version = "0.4.22", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
